<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Android Open Source illusion Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/custom_title">

    <PreferenceScreen
       android:key="status_bar"
       android:fragment="com.kasumi.closet.statusbar.StatusbarHolder"
       android:title="@string/statusbar_bar_title" 
       android:summary="@string/statusbar_bar_summary" 
       android:icon="@drawable/ic_closet_status"/>

    <PreferenceScreen
       android:key="quicksettings"
       android:fragment="com.kasumi.closet.qssettings.QsSettingsHolder"
       android:title="@string/quicksettings_title" 
       android:summary="@string/quicksettings_summary"
       android:icon="@drawable/ic_closet_qs"/>

    <PreferenceScreen
       android:key="notification"
       android:fragment="com.kasumi.closet.notification.NotificationHolder"
       android:title="@string/notification_title" 
       android:summary="@string/notification_summary"
       android:icon="@drawable/ic_closet_notif"/>

    <PreferenceScreen
       android:key="navigation"
       android:fragment="com.kasumi.closet.navigation.NavigationHolder"
       android:title="@string/navigation_title" 
       android:summary="@string/navigation_summary"
       android:icon="@drawable/ic_closet_nav"/>

    <PreferenceScreen
       android:key="buttons"
       android:fragment="com.kasumi.closet.buttons.ButtonsHolder"
       android:title="@string/buttons_title" 
       android:summary="@string/buttons_summary"
       android:icon="@drawable/ic_closet_buttons"/>

    <PreferenceScreen
       android:key="recent"
       android:fragment="com.kasumi.closet.recent.RecentHolder"
       android:title="@string/recent_title" 
       android:summary="@string/recent_summary"
       android:icon="@drawable/ic_closet_recents"/>

    <PreferenceScreen
       android:key="lockscreen"
       android:fragment="com.kasumi.closet.lockscreen.LockscreenHolder"
       android:title="@string/lockscreen_title" 
       android:summary="@string/lockscreen_summary"
       android:icon="@drawable/ic_closet_lockscreen"/>

    <PreferenceScreen
       android:key="gesture"
       android:fragment="com.kasumi.closet.gesture.GestureHolder"
       android:title="@string/gesture_category" 
       android:summary="@string/gesture_summary"
       android:icon="@drawable/ic_closet_gesture"/>

    <PreferenceScreen
       android:key="advanced"
       android:fragment="com.kasumi.closet.advanced.AdvancedHolder"
       android:title="@string/advanced_title"
       android:summary="@string/advanced_summary"
       android:icon="@drawable/ic_closet_advanced"/>

    <PreferenceScreen
       android:key="ota"
       android:title="@string/ota_title"
       android:summary="@string/ota_summary"
       android:icon="@drawable/ic_closet_ota" >
       <intent android:action="android.intent.action.MAIN"
               android:targetPackage="com.ota.updates"
               android:targetClass="com.ota.updates.activities.MainActivity" />
    </PreferenceScreen>

</PreferenceScreen>
